# bain-ml-take-home

./: .gitignore  Challenge.md  README.md  pyproject.toml
serving/: Dockerfile  README.md  app.py  config.py  models.py  pyproject.toml  routes.py  utils.py
training/: Dockerfile  Property-Friends-basic-model.ipynb  README.md  config.py  main.py  pyproject.toml
training/core/: base.py  evaluators.py  loaders.py  trainers.py
