[project]
name = "serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "category-encoders>=2.6.4",
    "fastapi>=0.116.0",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "scikit-learn==1.5.2",
    "uvicorn>=0.35.0",
]
