[project]
name = "bain-take-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "category-encoders>=2.6.4",
    "fastapi>=0.116.0",
    "ipykernel>=6.29.5",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "scikit-learn==1.5.2",
]

[dependency-groups]
dev = ["ruff>=0.12.2"]
